Implement fan-out via WebClient clients with graceful degradation