@@ -1,41 +1,62 @@
 package com.project.mobilebfflab.service;
 
+import com.project.mobilebfflab.client.AccountClient;
+import com.project.mobilebfflab.client.OfferClient;
+import com.project.mobilebfflab.client.UserClient;
+import com.project.mobilebfflab.client.dto.AccountClientDto;
+import com.project.mobilebfflab.client.dto.OfferClientDto;
+import com.project.mobilebfflab.client.dto.UserClientDto;
 import com.project.mobilebfflab.dto.HomeResponseDto;
+import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
 
 @Slf4j
 @Service
+@RequiredArgsConstructor
 public class HomeService {
+    private final UserClient userClient;
+    private final OfferClient offerClient;
+    private final AccountClient accountClient;
 
     public HomeResponseDto getHome() {
-        log.info("Формирование Home-экрана");
+        log.info("Fan-out для Home-экрана");
 
-        // Пока mock-данные
-        HomeResponseDto.UserDto user = HomeResponseDto.UserDto.builder()
-                .id("u-1")
-                .name("Client One")
-                .build();
+        UserClientDto user = userClient.getUser();
+        List<AccountClientDto> accounts = accountClient.getAccounts();
 
-        List<HomeResponseDto.AccountDto> accounts = List.of(
-                HomeResponseDto.AccountDto.builder()
-                        .id("a-1")
-                        .type("CARD")
-                        .balance("1000 ₽")
-                        .build()
-        );
+        boolean offersAvailable = true;
+        List<OfferClientDto> offers;
 
-        boolean offersAvailable = false;
-        List<HomeResponseDto.OfferDto> offers = List.of();
-
-        log.info("Home-экран сформирован (offersAvailable={})", offersAvailable);
+        try {
+            offers = offerClient.getOffers();
+        } catch (Exception ex) {
+            log.warn("Offers-service недоступен, деградация Home-экрана", ex);
+            offersAvailable = false;
+            offers = Collections.emptyList();
+        }
 
         return HomeResponseDto.builder()
-                .user(user)
-                .accounts(accounts)
-                .offers(offers)
+                .user(HomeResponseDto.UserDto.builder()
+                        .id(user.getId())
+                        .name(user.getFullName())
+                        .build())
+                .accounts(accounts.stream()
+                        .map(a -> HomeResponseDto.AccountDto.builder()
+                                .id(a.getId())
+                                .type(a.getType())
+                                .balance(a.getBalance())
+                                .build())
+                        .toList())
+                .offers(offers.stream()
+                        .map(o -> HomeResponseDto.OfferDto.builder()
+                                .id(o.getId())
+                                .title(o.getTitle())
+                                .build())
+                        .toList())
                 .offersAvailable(offersAvailable)
                 .build();
     }
